--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
 <div class="hero-image">
   <div class="hero-text">
     <h2 style="color:#C3EDE8;"><img src="pngflow.png" width="350" height="190" hspace="5"><br>
-    <i> Entra a far parte della più grande squadra di ladri</i></h2>
+    <i> Entra a far parte della piÃ¹ grande squadra di ladri</i></h2>
     <button class="button"><a href="file:///F:/sly/HERO222.html">Entra sul sito.</a></button>
   </div>
 </div>
